[package]
name = "ethers-fireblocks"
version = "0.1.3-alpha.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = """
ethers-rs middleware and signer for Fireblocks' APIs
"""


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers-core = { version="2.0.11", default-features = false }
ethers-providers = { version="2.0.11", default-features = false }
ethers-signers = { version="2.0.11", default-features = false }

serde_json = "1.0.108"
serde = "1.0.193"
jsonwebtoken = "7.2.0"
reqwest = { version = "0.11.23", default-features = false, features = ["json"] }
thiserror = "1.0.51"
rustc-hex = "2.1.0"
digest = "0.10.7"
sha2 = "0.10.8"
async-trait = "0.1.74"
rand = "0.8.5"

[dev-dependencies]
reqwest = { version = "0.11.23", default-features = false, features = ["json", "rustls"] }
tokio = { version = "1.35.0", features = ["macros", "rt"] }
once_cell = "1.19.0"

[features]
default = ["rustls"]
openssl = ["ethers-providers/openssl", "reqwest/native-tls"]
rustls = ["ethers-providers/rustls", "reqwest/rustls-tls"]
